[package]
name = "my-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = {version = "1.0.148", features = ["derive"]}
serde_json = "1.0"
sqlx = { version = "0.6", features = [ "runtime-actix-native-tls" , "sqlite" ] }
futures = "0.3"